# ENE-persona-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
MCP_agent/: config.py  graph.py
MCP_agent/agent/: cli.py  clova_mcp_gui.py  clova_mcp_v3_with_HTIL.py  persona_logic.py
MCP_agent/memory/: __init__.py  chroma_adapters.py  clova_adapters.py  interfaces.py
MCP_agent/nodes/: __init__.py  analyzer.py  context_builder.py  memory_manager.py
MCP_agent/utils/: clovastudio_executor.py  sliding_window_executor.py  summary_executor.py
evaluation/: compare_prompt.py  deep_eval_pr.py  deep_eval_tool.py  eval_ab.py
evaluation/configs/: eval_config.yaml  eval_pr_config.yaml  eval_tool_config.yaml
mcp_servers/: discord-mcp.py  naver_mcp.py
mcp_servers/scripts/: db_init.py  setup-ngrok.sh  setup-nodejs.sh  start-slack-mcp.sh
mcp_servers/src/: client.py
